第二次提交

--- a/CSS3常见边框.html
+++ b/CSS3常见边框.html
@@ -32,9 +32,9 @@
             font-size: 28px;
         }
 
-        .main {
+        /* .main {
             /*overflow: hidden;*/
-        }
+        
 
         .main:after {
             content: '';
